# Blip

./: .dockerignore  .gitignore  LICENSE  README.md  compose.yml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
docker/: Dockerfile
protocol/: Cargo.toml  build.rs
protocol/proto/: chat.proto
protocol/src/: lib.rs
server/: Cargo.toml
server/docker/: Dockerfile
server/src/: main.rs
