[package]
name = "tcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
env_logger = "0.11.10"
log = "0.4.29"
protocol = { path = "../protocol" }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[[bin]]
name = "tcp-server"
path = "src/main.rs"
